# SDKGenerator

./: AndroidManifest.xml  README.md
jni/: Android.mk
jni/src/: CMakeLists.txt  EngineClasses.hpp  Generator.cpp  IGenerator.hpp  Includes.h  Main.h  NamesStore.cpp  ObjectsStore.cpp  Package.cpp  Package.hpp  PatternFinder.cpp  PatternFinder.hpp  PrintHelper.cpp  Tools.cpp  Tools.h  main.cpp
jni/src/UE4/: FunctionFlags.cpp  FunctionFlags.hpp  GenericTypes.cpp  PropertyFlags.cpp  PropertyFlags.hpp
jni/src/fmt/: format.h
jni/src/hash/: hash.h
res/values/: strings.xml
